# mte7102-proj2

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md
doc/abstract/: abstract.tex
doc/doc/: Makefile  documentation.tex  pdflatex-color.sh
doc/doc/img/: logo.xcf
doc/doc/inc/: 10_introduction.tex  20_administrative.tex  30_scope.tex  40_procedure.tex  50_software_architecture.tex  60_prototype.tex  70_rendering.tex  80_conclusion.tex
doc/doc/inc/50/: actors.tex  additional-requirements.tex  class_diagrams.tex  components.tex  domain_model.tex  logical_architecture.tex  requirements.tex  sequence_diagram.tex  uc0.tex  uc1.tex  uc10.tex  uc2.tex  uc3.tex  uc4.tex  uc5.tex  uc6.tex  uc7.tex  uc8.tex  uc9.tex  use-cases.tex  vision.tex
doc/doc/inc/60/: components.tex  models.tex  procedure.tex  rendering.tex  sequence.tex
doc/doc/inc/70/: architecture.tex  complexity.tex  meshes.tex  modulo_op.tex  normal_vectors.tex  realization.tex
doc/doc/inc/static/: abstract.tex  bibliography.bib  title.tex  versions.tex
doc/doc/inc/static/attachment/: 10_meeting_minutes.tex
doc/doc/inc/static/attachment/minutes/: 20160224.rst  20160401.rst  20160427.rst  20160715.rst
doc/pres/: Makefile  includes.txt  package.json
doc/pres/css/: custom.css
doc/pres/slides/: 01-intro.html  05-steps.html  08-lessons-learned.html  09-outro.html
doc/pres/slides/02-motivation/: 01-intro.html  02-motivation.html
doc/pres/slides/02-vision/: 01-vision.html  02-gui.html
doc/pres/slides/03-arch/: 01-arch.html
doc/pres/slides/03-motivation/: 03-problems.html
doc/pres/slides/04-arch/: 02-procedure.html
doc/pres/slides/04-vision/: 01-vision.html  03-gui-action.html
doc/pres/slides/06-layers/: 01-intro.html  02-ui-app.html  03-domain.html  04-tech-found.html
doc/pres/slides/07-prototype/: 01-intro.html  02-goal.html  03-procedure.html
doc/ui/: main_ui.ep  timeline.xcf
doc/uml/activity_diagrams/: .project  prototype_activity_diagram.notation  prototype_activity_diagram.uml
doc/uml/class_diagrams/: .project  editor.notation  editor.uml  player.notation  player.uml  prototype.notation  prototype.uml
doc/uml/component_diagrams/: .project  editor_components.notation  editor_components.uml
doc/uml/domain_model/: .project  editor.notation  editor.uml  player.notation  player.uml
doc/uml/logical_architecture/: .project  editor.notation  editor.uml  layers.notation  layers.uml  player.notation  player.uml
doc/uml/sequence_diagrams/: .project  prototype_sequence_diagram.notation  prototype_sequence_diagram.uml  uc1_viewing_demo.notation  uc1_viewing_demo.uml
resources/: im.icns
resources/data/: sphere_tracer.fs
resources/data/misc/: camera.fs.xml
resources/data/objects/: box.fs.xml  sphere.fs.xml
resources/data/operations/: mod1.fs.xml  union.fs.xml  union_chamfer.fs.xml
src/: CMakeLists.txt  camera.hpp  cameragraphnode.cpp  cameragraphnode.hpp  clickablelabel.cpp  clickablelabel.hpp  common.hpp  connector.cpp  connector.hpp  directpopup.cpp  directpopup.hpp  dummygraphnode.hpp  genericgraphnode.cpp  genericgraphnode.hpp  glshader.cpp  glshader.hpp  glshaderobject.cpp  glshaderobject.hpp  glshaderparameter.cpp  glshaderparameter.hpp  glshadersource.cpp  glshadersource.hpp  graph.cpp  graph.hpp  graphnode.cpp  graphnode.hpp  graphnodelink.cpp  graphnodelink.hpp  inputsink.cpp  inputsink.hpp  main.cpp  main.hpp  mergegraphnode.cpp  mergegraphnode.hpp  outputgraphnode.cpp  outputgraphnode.hpp  outputsink.cpp  outputsink.hpp  property.hpp  property.hpp.back  (+8 more)
